# artificial-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/artificial/: Cargo.toml
crates/artificial-core/: Cargo.toml
crates/artificial-core/src/: backend.rs  client.rs  error.rs  generic.rs  lib.rs  model.rs  provider.rs  schema_util.rs  template.rs
crates/artificial-core/src/provider/: chat_complete.rs  mod.rs  prompt_execute.rs  transcription.rs
crates/artificial-openai/: Cargo.toml
crates/artificial-openai/src/: adapter.rs  backend.rs  client.rs  error.rs  lib.rs  model_map.rs  provider_impl_chat.rs  provider_impl_chat_stream.rs  provider_impl_prompt.rs  provider_impl_responses.rs  provider_impl_transcription.rs
crates/artificial-openai/src/api_v1/: audio_transcription.rs  chat_completion.rs  chat_completion_stream.rs  common.rs  mod.rs  responses.rs  tools.rs
crates/artificial-prompt/: Cargo.toml
crates/artificial-prompt/src/: builder.rs  chain.rs  lib.rs
crates/artificial-types/: Cargo.toml
crates/artificial-types/src/: lib.rs
crates/artificial-types/src/fragments/: current_date.rs  mod.rs  static_fragment.rs
crates/artificial-types/src/outputs/: any.rs  mod.rs  result.rs
crates/artificial/examples/: openai_advice.rs  openai_audio_transcription.rs  openai_capture_memory.rs  openai_chat_complete.rs  openai_chat_stream.rs  openai_chat_stream_tools.rs  openai_hello_world.rs  openai_tool_weather.rs
crates/artificial/examples/data/role/: base_system.md  memory_architect.md
crates/artificial/src/: lib.rs
hack/: publish.sh  version.sh
