[package]
name = "artificial-core"
version = "0.4.0"
edition = "2021"
description = "Provider-agnostic core traits, generic client and error types for the Artificial prompt-engineering SDK"
license = "MIT"
repository = "https://github.com/mrcrgl/artificial-rs"
categories = ["api-bindings", "development-tools", "text-processing"]
keywords = ["ai", "prompt-engineering", "sdk", "json-schema"]

[dependencies]
serde_json.workspace = true
thiserror = "2.0.12"

serde.workspace = true
schemars.workspace = true
futures-core.workspace = true
