[package]
name = "artificial-openai"
version = "0.4.2"
edition = "2024"
description = "OpenAI backend adapter for the Artificial prompt-engineering SDK"
license = "MIT"
repository = "https://github.com/mrcrgl/artificial-rs"
categories = ["api-bindings", "development-tools", "text-processing"]
keywords = ["ai", "openai", "json-schema", "prompt-engineering"]

[dependencies]
futures-core.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
thiserror = "2.0"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
    "http2",
    "gzip",
    "brotli",
    "deflate",
    "multipart",
] }
artificial-core = { path = "../artificial-core" , version = "0.4.2"}
futures-util = "0.3"
async-stream = "0.3"
bytes = "1"
tracing = { version = "0.1", optional = true }

[features]
default = []
tracing = ["dep:tracing"]
