[package]
name = "artificial-prompt"
version = "0.2.0"
edition = "2024"
description = "Fluent builders and helpers for composing markdown prompt fragments"
license = "MIT"
repository = "https://github.com/mrcrgl/artificial-rs"
categories = ["development-tools", "text-processing"]
keywords = ["ai", "prompt", "markdown", "builder"]

[dependencies]
artificial-core = { path = "../artificial-core" , version = "0.2.0"}
